<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@id/constraint">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/fullname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_box"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz."
                android:ems="30"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/id_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_idNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittext_box"
                android:digits="1234567890-+"
                android:ems="30"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/department"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_dept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_box"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 1234567890.,"
                android:ems="15"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/generate_qr"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:typeface="serif"
                app:cornerRadius="10dp"
                app:rippleColor="#707070"
                app:strokeWidth="2dp" />

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/generate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_saveQr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:elevation="10dp"
                android:padding="10dp"
                android:visibility="gone"
                android:text="@string/save_qr_code"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:typeface="serif"
                app:backgroundTint="@color/gray"
                app:cornerRadius="5dp"
                app:rippleColor="#707070"
                app:strokeWidth="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_qr"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>