<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_newAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="newAttendance"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_calendar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif"
                        android:text="@string/new_attendance"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_attendanceList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:onClick="btn_attendanceList"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_attendance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif"
                        android:maxLines="2"
                        android:text="@string/attendance_list"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="30dp"
            android:onClick="expandDropDown"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gridview"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/qr_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/additional_menu"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <GridLayout
                android:id="@+id/drop_down_gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:animateLayoutChanges="true"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="2"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_generate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:onClick="btn_createQr"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_qr_code" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="serif"
                            android:text="@string/create_qr_code"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_qrdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:onClick="btn_generatedQr"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_showdb" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="serif"
                            android:text="@string/generated_qr_code"
                            android:textColor="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>